fixed chevron alignment

--- a/fastfax/assets/css/style.css
+++ b/fastfax/assets/css/style.css
@@ -1267,10 +1267,12 @@ section {
 
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
+  position: relative;
 }
 
 .faq .faq-list a.collapsed .icon-close {
   display: none;
+  position: relative;
 }
 
 @media (max-width: 1200px) {
